--- a/blocks/card/__header/card__header.css
+++ b/blocks/card/__header/card__header.css
@@ -1,3 +1,9 @@
 .card__header {
     margin: 30px 45px;
 }
+
+@media (max-width: 575px) {
+    .card__header {
+        margin: 30px 15px 15px;
+    }
+}
