--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,6 +1,7 @@
 .form__button {
     background: none;
-    max-width: 214px;
+    min-width: 214px;
+    max-width: 100%;
     min-height: 50px;
     border-radius: 29.5px;
     font-size: 16px;
