--- a/blocks/accordion/__image/accordion__image.css
+++ b/blocks/accordion/__image/accordion__image.css
@@ -3,4 +3,11 @@
     max-width: 100%;
     object-fit: cover;
     border-radius: 50%;
+    display: block;
+}
+
+@media (max-width: 575px) {
+    .accordion__image {
+        margin: 0 auto;
+    }
 }
