--- a/blocks/accordion/__column-right/accordion__column-right.css
+++ b/blocks/accordion/__column-right/accordion__column-right.css
@@ -1,5 +1,11 @@
 .accordion__column-right {
     grid-column-start: 2;
     grid-row-start: 1;
-    grid-row-end: 100;
+    grid-row-end: 3;
+}
+
+@media (max-width: 575px) {
+    .accordion__column-right {
+        grid-area: auto;
+    }
 }
