--- a/blocks/accordion/__content-container/accordion__content-container.css
+++ b/blocks/accordion/__content-container/accordion__content-container.css
@@ -3,6 +3,26 @@
     padding: 30px 0;
     border-top: 1px solid #405265;
     display: grid;
-    grid-template-columns: 693px 1fr;
+    grid-template-columns: 57.5% 1fr;
     column-gap: 118px;
+}
+
+@media (max-width: 1023.5px) {
+    .accordion__container-content {
+       column-gap: 40px;
+       row-gap: 30px;
+    }
+}
+
+@media (max-width: 575px) {
+    .accordion__container-content {
+        grid-template-columns: 100%;
+    }
+}
+
+@media (max-width: 575px) {
+    .accordion__container-content {
+        margin: 0 15px;
+        padding: 15px 0 30px;
+    }
 }
