--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,4 +1,5 @@
-@import '/blocks/card/__header/card__header.css';
+@import '../../blocks/card/header/card__header.css';
+@import '../../blocks/card/__header/card__header.css';
 @import '../../blocks/card/__meta-list/card__meta-list.css';
 @import '../../blocks/card/__meta-item/card__meta-item.css';
 @import '../../blocks/card/__meta/card__meta.css';
